--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -861,6 +861,10 @@
   padding: 0 1.2rem;
 }
 
+.section__reviews-container-text {
+  text-align: center;
+}
+
 .section__reviews-container-text-intro {
   margin-bottom: 5rem;
   text-align: center;
