sua textarea resize

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -150,6 +150,7 @@ html {
   font-size: 1.6rem;
   line-height: 2.5rem;
   margin: 0 0 1rem 0;
+  resize: vertical;
 }
 
 .contact-input-textarea:focus {
